# vela-framework

./: .env.example  .gitignore  README.md  app.py  inference.py  pyproject.toml  requirements.txt
docs/: METHODOLOGY.md
examples/: simple_analysis.py
vela/: __init__.py  adversary.py  agent.py  config.py  content_extractor.py  reasoning.py  schemas.py  search.py
vela/data/: company_vectors_lean.pkl
vela/prompts/: __init__.py  research.py  system.py
vela/tools/: __init__.py  confidence_gate.py  ddg_search.py  fact_extractor.py  lmstudio_client.py  mlx_client.py  naver_finance_client.py  naver_search.py  runpod_client.py  vector_filter.py  vllm_client.py  zerogpu_client.py
