[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vela-framework"
version = "1.0.0"
description = "VELA: Domain-Specialized LLM Research Agent for Korean Financial Markets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Intrect"},
]
keywords = ["llm", "financial-analysis", "research-agent", "korean-stocks", "chain-of-thought"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "pydantic>=2.0",
    "requests>=2.28",
    "python-dotenv>=1.0",
    "duckduckgo-search>=4.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
web = [
    "gradio>=5.0",
]
train = [
    "torch>=2.0",
    "transformers>=4.40",
    "peft>=0.10",
    "trl>=0.8",
    "datasets>=2.18",
    "accelerate>=0.28",
    "bitsandbytes>=0.43",
]

[project.urls]
Homepage = "https://github.com/intrect/vela-framework"
Repository = "https://github.com/intrect/vela-framework"

[project.scripts]
vela = "vela.agent:main"

[tool.setuptools.packages.find]
include = ["vela*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
